# docify-project

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docify/: generator.py  scanner.py
docify_tool/: cli.py  dataset_extractor.py  generator.py  helper.py  prompts.py  scanner.py
