[project]
name = "docify-ai" 
version = "1.0.0" 
authors = [
  { name="Shiwang Upadhyay", email="shiwangupadhyay8@gmail.com" },
]
description = "An AI-powered README.md generator for local projects."
readme = "README.md" 
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "langchain-google-genai>=0.1.0",
    "langchain-core>=0.1.0",
]

[project.scripts]
docify = "docify_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docify_tool*"]
exclude = ["tests*"]

[project.urls]
Homepage = "https://github.com/shiwangupadhyay/docify-project"
Repository = "https://github.com/shiwangupadhyay/docify-project"
