[project]
name = "docify-ai" 
version = "1.3.0" 
dynamic = ["readme"]
authors = [
  { name = "Shiwang Upadhyay"}, 
  {email = "shiwangupadhyay8@gmail.com" }
]
description = "An AI-powered README.md generator for local projects."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "google-generativeai>=0.8.5",
    "openai>=1.100.2"
]
keywords = [
    "ai",
    "documentation",
    "readme-generator",
    "tests-generator",
    "mermaid-diagrams",
    "openai",
    "gemini",
    "automation",
    "developer-tools",
    "cli"
]

[tool.setuptools]

[tool.setuptools.dynamic]
readme = { file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown" }

[project.scripts]
docify = "docify_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docify_tool*"]
exclude = ["tests*"]

[project.urls]
Homepage = "https://github.com/shiwangupadhyay/docify-project"
Repository = "https://github.com/shiwangupadhyay/docify-project"
Issues = "https://github.com/shiwangupadhyay/docify-project/issues"